Imported from https://spetrovic77@github.com/ServiceWeaver/weaver.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
 [access]
-	inheritFrom = All-Projects
+	inheritFrom = Private-Projects
 [submit]
-	action = inherit
+[project]
+	description = Programming framework for writing and deploying cloud applications.
+[access "refs/*"]
+	owner = group user/Srdjan Petrovic (spetrovic77)
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/Srdjan Petrovic (spetrovic77)
+	label-Verified = -1..+1 group user/Srdjan Petrovic (spetrovic77)
+	push = group user/Srdjan Petrovic (spetrovic77)
+	read = group user/Srdjan Petrovic (spetrovic77)
+	rebase = group user/Srdjan Petrovic (spetrovic77)
+	removeReviewer = group user/Srdjan Petrovic (spetrovic77)
+	submit = group user/Srdjan Petrovic (spetrovic77)
+[access "refs/heads/*"]
+	create = group user/Srdjan Petrovic (spetrovic77)
+	push = +force group user/Srdjan Petrovic (spetrovic77)
+	pushMerge = group user/Srdjan Petrovic (spetrovic77)
+	read = group user/Srdjan Petrovic (spetrovic77)
+[access "refs/tags/*"]
+	push = group user/Srdjan Petrovic (spetrovic77)
+	push = +force group user/Srdjan Petrovic (spetrovic77)
