Modify access rules

--- a/project.config
+++ b/project.config
@@ -4,20 +4,31 @@
 [project]
 	description = Programming framework for writing and deploying cloud applications.
 [access "refs/*"]
+	owner = group ServiceWeaver/weaver
 	owner = group user/Srdjan Petrovic (spetrovic77)
 [access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group ServiceWeaver/weaver
 	label-Code-Review = -2..+2 group user/Srdjan Petrovic (spetrovic77)
+	label-Verified = -1..+1 group ServiceWeaver/weaver
 	label-Verified = -1..+1 group user/Srdjan Petrovic (spetrovic77)
+	push = group ServiceWeaver/weaver
 	push = group user/Srdjan Petrovic (spetrovic77)
-	read = group user/Srdjan Petrovic (spetrovic77)
+	rebase = group ServiceWeaver/weaver
 	rebase = group user/Srdjan Petrovic (spetrovic77)
+	removeReviewer = group ServiceWeaver/weaver
 	removeReviewer = group user/Srdjan Petrovic (spetrovic77)
+	submit = group ServiceWeaver/weaver
 	submit = group user/Srdjan Petrovic (spetrovic77)
 [access "refs/heads/*"]
+	create = group ServiceWeaver/weaver
 	create = group user/Srdjan Petrovic (spetrovic77)
+	push = group ServiceWeaver/weaver
 	push = +force group user/Srdjan Petrovic (spetrovic77)
+	pushMerge = group ServiceWeaver/weaver
 	pushMerge = group user/Srdjan Petrovic (spetrovic77)
+	read = group ServiceWeaver/weaver
 	read = group user/Srdjan Petrovic (spetrovic77)
 [access "refs/tags/*"]
+	push = group ServiceWeaver/weaver
 	push = group user/Srdjan Petrovic (spetrovic77)
 	push = +force group user/Srdjan Petrovic (spetrovic77)
