Fix stale images and other minor fixes.

--- a/examples/hello/weaver.toml
+++ b/examples/hello/weaver.toml
@@ -1,2 +1,8 @@
 [serviceweaver]
 binary = "./hello"
+
+[gke]
+regions = ["us-west1"]
+public_listener = [
+  {name = "hello", hostname = "hello.com"},
+]
