--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -15,6 +15,8 @@
 linters:
   disable:
     - errcheck # Currently too many places are ignoring errors
+  enable:
+    - nolintlint
 linters-settings:
   staticcheck:
     checks:
