Fixed incorrect path in GitHub workflow.

--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: 'public'
+          path: 'website/public'
 
       - name: Deploy to GitHub Pages
         id: deployment
