Upgraded to go 1.20.
This PR upgrades the Service Weaver module to go 1.20. We will no longer
support go 1.19 and earlier. This will let us use some nice go 1.20
features like error trees: https://tip.golang.org/doc/go1.20#errors.

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,7 +26,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: ["1.19", "1.20"]
+        version: ["1.20"]
         command: ["build", "vet", "lint", "test", "testrace"]
     steps:
       - name: Check out repository
@@ -57,7 +57,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: ["1.19", "1.20"]
+        version: ["1.20"]
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
