Update the reverser app for running on GKE.
Namely:
  * Add the /healthz endpoint.
  * Add the public listener to the config.

--- a/examples/reverser/weaver.toml
+++ b/examples/reverser/weaver.toml
@@ -1,2 +1,10 @@
 [serviceweaver]
 binary = "./reverser"
+rollout = "5m"
+
+[gke]
+regions = ["us-west1"]
+public_listener = [
+  {name = "reverser", hostname = "reverser.example.com"},
+]
+
