Declare listeners as fields in the component implementation.
This will allow us to build a static map of component -> listeners,
which a deployer may read from a binary to initialize the listeners
ahead of time (e.g., a Kube deployer).

Other changes:
  * Listeners are customized in the application config file.
  * The weavelet no longer knows about listener options.
  * Slight simplifying changes to the envelope protocol.

--- a/examples/collatz/weaver.toml
+++ b/examples/collatz/weaver.toml
@@ -2,6 +2,9 @@
 binary = "./collatz"
 rollout = "5m"
 
+[listeners]
+collatz = {local_address = "localhost:9000"}
+
 [ssh]
 locations_file = "./ssh_locations.txt"
 
