Add reference/example to the kube deployer
Add reference to the `kube` deployer.
Add `[kube]` config in the collatz app, to be able to run it using the
`kube` deployer.

--- a/examples/collatz/weaver.toml
+++ b/examples/collatz/weaver.toml
@@ -13,3 +13,6 @@ regions = ["us-west1"]
 public_listener = [
   {name = "collatz", hostname = "collatz.example.com"},
 ]
+
+[kube]
+public_listeners = [{name = "collatz"}]
