Modify the listener format for local listeners.
This fixes the weirdness of the "local_address" field, which
is only used by multi/single/ssh deployers, but not others
(e.g., GKE, kube). The plan is to move the listener options
into the deployer config sections, since they are largely
different.

Based on discussions with @rgrandl and @mwhittaker.

Other changes:
* Simplify the parsing of the listener config, by reading
  into a `map[string]ListenerOptions`. This obviates the
  need for using the `toml.Primitive` type.

TODO: Change the format of the GKE/kube deployers to be similar.

--- a/examples/chat/weaver.toml
+++ b/examples/chat/weaver.toml
@@ -2,11 +2,15 @@
 binary = "./chat"
 rollout = "5m"
 
-[listeners]
-chat = {local_address = "localhost:9000"}
+[single]
+listeners.chat = {address = "localhost:9000"}
+
+[multi]
+listeners.chat = {address = "localhost:9000"}
 
 [gke]
 regions = ["us-west1", "us-east1"]
+# TODO(spetrovic): Rewrite to match the single/multi listeners format.
 public_listener = [
   {name = "chat", hostname = "chat.example.com"},
 ]
