--- a/examples/factors/weaver.toml
+++ b/examples/factors/weaver.toml
@@ -2,11 +2,15 @@
 binary = "./factors"
 rollout = "5m"
 
-[listeners]
-factors = {local_address = "localhost:9000"}
+[single]
+listeners.factors = {address = "localhost:9000"}
+
+[multi]
+listeners.factors = {address = "localhost:9000"}
 
 [gke]
 regions = ["us-west1"]
+# TODO(spetrovic): Rewrite to match the single/multi listeners format.
 public_listener = [
   {name = "factors", hostname = "factors.example.com"},
 ]
