--- a/examples/reverser/weaver.toml
+++ b/examples/reverser/weaver.toml
@@ -2,11 +2,15 @@
 binary = "./reverser"
 rollout = "5m"
 
-[listeners]
-reverser = {local_address = ":9000"}
+[single]
+listeners.reverser = {address = "localhost:9000"}
+
+[multi]
+listeners.reverser = {address = "localhost:9000"}
 
 [gke]
 regions = ["us-west1"]
+# TODO(spetrovic): Rewrite to match the single/multi listeners format.
 public_listener = [
   {name = "reverser", hostname = "reverser.example.com"},
 ]
