--- a/examples/collatz/colocated.toml
+++ b/examples/collatz/colocated.toml
@@ -15,6 +15,4 @@ locations_file = "./ssh_locations.txt"
 
 [gke]
 regions = ["us-west1"]
-public_listener = [
-  {name = "collatz", hostname = "collatz.example.com"},
-]
+listeners.collatz = {public_hostname = "collatz.example.com"}
