--- a/examples/collatz/weaver.toml
+++ b/examples/collatz/weaver.toml
@@ -14,11 +14,7 @@ locations_file = "./ssh_locations.txt"
 
 [gke]
 regions = ["us-west1"]
-# TODO(spetrovic): Rewrite to match the single/multi listeners format.
-public_listener = [
-  {name = "collatz", hostname = "collatz.example.com"},
-]
+listeners.collatz = {public_hostname = "collatz.example.com"}
 
 [kube]
-# TODO(spetrovic): Rewrite to match the single/multi listeners format.
-public_listeners = [{name = "collatz"}]
+listeners.collatz = {public = true}
