Fix the reading of the SSH config.
In particular, read the config once and with all the right
fields specified.

--- a/examples/collatz/colocated.toml
+++ b/examples/collatz/colocated.toml
@@ -11,7 +11,7 @@ colocate = [
 ]
 
 [ssh]
-locations_file = "./ssh_locations.txt"
+locations = "./ssh_locations.txt"
 
 [gke]
 regions = ["us-west1"]
