--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,98 +21,62 @@ on:
  pull_request:
 
 jobs:
-  build:
+  do_not_submit:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        version: ["stable"]
-        command: ["build", "vet", "lint", "test", "testrace"]
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: ${{ matrix.version }}
-          cache: true
+      - name: Print ~/.cache/go-build
+        run: find ~/.cache/go-build || true
 
-      - name: Cache linter
-        uses: actions/cache@v3
-        with:
-          path: ~/go/bin/staticcheck
-          key: staticcheck-v0.4.3
-        if: ${{ matrix.command == 'lint' }}
-
-      - name: Install linter
-        run: go install honnef.co/go/tools/cmd/staticcheck@v0.4.3
-        if: ${{ matrix.command == 'lint' }}
-
-      - name: Build the weaver binary
-        run: cd cmd/weaver; go build .
-        if: ${{ matrix.command == 'test' || matrix.command == 'testrace' }}
-
-      - name: ${{ matrix.command }}
-        run: ./dev/build_and_test ${{ matrix.command }}
-
-  generate:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        version: ["stable"]
-    steps:
-      - name: Check out repository
-        uses: actions/checkout@v3
+      - name: Print ~/go
+        run: find ~/go || true
 
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: ${{ matrix.version }}
+          go-version: "stable"
           cache: true
 
-      - name: Cache protoc-gen-go
-        uses: actions/cache@v3
-        with:
-          path: ~/go/bin/protoc-gen-go
-          key: protoc-gen-go-v1.26
+      - name: Print ~/.cache/go-build
+        run: find ~/.cache/go-build || true
 
-      - name: Cache addlicense
-        uses: actions/cache@v3
-        with:
-          path: ~/go/bin/addlicense
-          key: addlicense-v1.1.1
+      - name: Print ~/go
+        run: find ~/go || true
 
-      - name: Install protoc
-        run: sudo apt install -y protobuf-compiler
-
-      - name: Install protoc-gen-go
-        run: go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.26
-
-      - name: Install addlicense
-        run: go install github.com/google/addlicense@v1.1.1
-
-      - name: Generate code
-        run: ./dev/build_and_test generate
-
-      - name: Check spurious changes
+      - name: Linux
         run: |
-          # TODO(mwhittaker): Check .pb.go files.
-          # Exclude the weaver binary, which is built by the generate tool.
-          rm ./cmd/weaver/weaver
-          # Exclude .pb.go files, as the protoc version may differ.
-          if [[ $(git ls-files --modified --others | grep -v '.*\.pb\.go') ]]; then
-            for f in $(git ls-files --modified); do
-              if ! [[ $f == *.pb.go ]]; then
-                echo "❌ File $f modified."
-                git diff "$f"
-              fi
-            done
-            for f in $(git ls-files --others); do
-              echo "❌ File $f untracked."
-            done
-            echo "Run './dev/build_and_test generate' and commit the changes."
-            exit 1
-          fi
-          echo "Success ✅"
+          cd runtime/bin
+          time GOOS=linux GOARCH=amd64 go build -v -o linux ./testprogram/
+
+      - name: Windows
+        run: |
+          cd runtime/bin
+          time GOOS=windows GOARCH=amd64 go build -v -o windows ./testprogram/
+
+      - name: Mac
+        run: |
+          cd runtime/bin
+          time GOOS=darwin GOARCH=arm64 go build -v -o mac ./testprogram/
+
+      - name: Linux Again
+        run: |
+          cd runtime/bin
+          time GOOS=linux GOARCH=amd64 go build -v -o linux ./testprogram/
+
+      - name: Windows Again
+        run: |
+          cd runtime/bin
+          time GOOS=windows GOARCH=amd64 go build -v -o windows ./testprogram/
+
+      - name: Mac Again
+        run: |
+          cd runtime/bin
+          time GOOS=darwin GOARCH=arm64 go build -v -o mac ./testprogram/
+
+      - name: Print ~/.cache/go-build
+        run: find ~/.cache/go-build || true
+
+      - name: Print ~/go
+        run: find ~/go || true
