Added instructions to run chat app on Kubernetes.
This PR adds instructions on how to run the chat app on a Kubernetes
cluster using the `weaver kube` deployer. The main challenge is running
MySQL in the Kubernetes cluster. It is quite a bit more involved than
running MySQL locally using Docker. You have to write about 100 lines of
Kubernetes YAML, which isn't rocket science, but it also isn't the most
pleasant experience.

--- a/examples/chat/weaver.toml
+++ b/examples/chat/weaver.toml
@@ -12,6 +12,11 @@ listeners.chat = {address = "localhost:9000"}
 regions = ["us-west1", "us-east1"]
 listeners.chat = {public_hostname = "chat.example.com"}
 
+[kube]
+listeners.chat = {public = true}
+# To upload the image to another repository, check `weaver kube deploy -h`.
+repo = "docker.io/my_docker_hub_username/"
+
 ["github.com/ServiceWeaver/weaver/examples/chat/SQLStore"]
 db_driver = "mysql"
 db_uri = "root:password@tcp(localhost:3306)/chat"
