Add optional names for colocation groups
We've discussed to enable the user to specify group names.
Right now we compute automatically the group names as the name of the
first component in each group.

This PR enables the user to specify group names (optionally). This is
becoming more and more important given that we allow the user to
configure various knobs in the deployer, and many knobs make sense for a
particular colocation group. E.g., secrets/config maps make sense for colocation
group. Maybe we will allow people to configure resource requirements per
colocation group at some point, etc.

--- a/examples/collatz/colocated.toml
+++ b/examples/collatz/colocated.toml
@@ -1,13 +1,13 @@
 [serviceweaver]
 binary = "./collatz"
-args = ["--local_addr=localhost:10000"]
 rollout = "5m"
-colocate = [
-  [
-    "main",
+
+[[serviceweaver.colocate]]
+name = "all"
+components = [
+    "github.com/ServiceWeaver/weaver/Main",
     "github.com/ServiceWeaver/weaver/examples/collatz/Even",
     "github.com/ServiceWeaver/weaver/examples/collatz/Odd"
-  ]
 ]
 
 [ssh]
